--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "dependencies": {
     "chokidar": "^1.7.0",
     "highlight.js": "^9.12.0",
-    "hot-server": "^0.0.16",
+    "hot-server": "0.0.22",
     "lit-node": "^0.0.1",
     "marked": "^0.3.6"
   },
   "scripts": {
-    "start": "hot-server",
+    "start": "hot-server --dir=public",
     "build": "lit-node source/_posts/2018-05-24-literate-blogging.md"
   }
 }
